ghc-4335c07/testsuite/tests/polykinds/T8132.stderr

T8132.hs:7:1: error:
    • Class ‘Typeable’ does not support user-specified instances
    • In the instance declaration for ‘Typeable K’
